# sound-visualizer

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  Procfile  README.md  captain-definition-api  captain-definition-front  captain-definition-web  captain-definition-worker  get_version.py  gunicorn_config.py  gunicorn_docker_config.py  heroku.yml  logging_conf.json  package-lock.json  pyproject.toml  requirements.txt  requirements_dev.txt  scratch.ipynb  setup.cfg
.github/workflows/: ci.yml
deployment_template/: config.env
doc/: bookmarks.md
docker/: Dockerfile_api  Dockerfile_front  Dockerfile_tests  Dockerfile_web  Dockerfile_worker  docker-compose.yml
docker_files/: Dockerfile_web  docker-compose.yml
sound_visualizer/: config.py  fft.py  main.py  main_api.py  spleeter.py
sound_visualizer/api/: app.py  main_docker.py  main_legacy.py
sound_visualizer/api/resources/: spectral_analysis.py  spectral_analysis_request.py  spectral_analysis_result.py  tiles_resource.py
sound_visualizer/api/web/: app.py  main_web.py
sound_visualizer/api/worker/: main_worker.py
sound_visualizer/app/: cache.py  spectral_analysis_request_handler.py  tiler.py
sound_visualizer/app/converter/: FFMPEGConverter.py  __init__.py  mp3.py  null_converter.py
sound_visualizer/app/image/: grey_scale_image_generator.py  image_blender.py
sound_visualizer/app/input/: __init__.py  sound_reader.py
sound_visualizer/app/message_queue/: message_queue.py  (+2 more)
sound_visualizer/cli/: main.py
sound_visualizer/common/: cache.py
sound_visualizer/heroku_api/: config.py  web_api.py  worker_api.py
sound_visualizer/models/: spectral_analysis_parameters.py  spectral_analysis_request.py  spectrogram_request_data.py
sound_visualizer/output/: grey_scale_image.py
sound_visualizer/sound/: __init__.py  sound_reader.py  spectral_analyser.py
sound_visualizer/sound_reader/: fft.py  sound_reader.py
sound_visualizer/utils/: __init__.py  google_cloud.py  logger.py  size.py  stopwatch.py
sound_visualizer/website_api/: app.py
sound_visualizer/worker/: main_worker.py
static/: .env.development  .env.production  .env.staging  Jenkinsfile  package-lock.json  package.json  vue.config.js
static/public/: index.html
static/src/: App.vue  main.ts  shims-vue.d.ts
tests/: test_sound_visualizer.py  util.py
tests/api/: test_api.py
tests/app/: test_cache.py
tests/models/: spectral_analysis_request.py  test_spectral_analysis_request.py
tests/sound_reader/: test_fft.py  test_sound_reader.py  test_spectral_analyser.py  util.py
website/: Jenkinsfile  package-lock.json  package.json
website/src/: App.vue
(+70 files in other folders)
