[tool.poetry]
name = "sound-visualizer"
version = "0.1.0"
description = ""
authors = ["Luc Leonard <github@luc-leonard.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
scipy = "^1.5"
matplotlib="^3.3"
pydantic="^1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8="^3.8"
isort="^5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true
