[tool.poetry]
name = "sound-visualizer"
version = "0.1.0"
description = ""
authors = ["Luc Leonard <github@luc-leonard.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
scipy = "^1.5"
pydantic="^1.7"
mypy = "^0.790"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
Pillow = "^8.0.1"
ffmpeg-python = "^0.2.0"
youtube_dl = "^2020.11.19"
google-cloud-pubsub = "^2.1.0"
google-cloud-storage = "^1.33.0"
pymongo = "^3.11.1"
dnspython = "^2.0.0"
Flask-RESTful = "^0.3.8"
pymongo-stubs = "^0.1.0"
docker = "^4.4.0"
Flask-Pydantic = "^0.4.0"
Flask-Cors = "^3.0.9"
beautifulsoup4 = "^4.9.3"
pika = "^1.1.0"
environ-config = "^20.1.0"
promise = "^2.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8="^3.8"
isort="^5.6"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true
