[tool.poetry]
name = "sound-visualizer"
version = "0.5.0"
description = ""
authors = ["Luc Leonard <github@luc-leonard.fr>"]

[tool.poetry.dependencies]
python =  ">=3.8,<3.9"
numpy = ">=1.16.0,<1.19.0"
scipy = "1.4.1"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
Pillow = "^8.0.1"
ffmpeg-python = "^0.2.0"
youtube_dl = ">=2020.11.19"
google-cloud-storage = "^1.33.0"
pymongo = "^3.11"
Flask-RESTful = "^0.3.8"
docker = "^4.4.0"
Flask-Pydantic = "^0.4.0"
Flask-Cors = "^3.0.9"
beautifulsoup4 = "^4.9.3"
pika = "^1.1"
environ-config = "^20.1"
promise = "^2.3"
# required for  mongodb+srv:// URIs
dnspython = "^2.0.0"
spleeter-gpu = "^2.0.2"



[tool.poetry.dev-dependencies]
pytest = "^6"
black = "^20.8b1"
flake8="^3.8"
isort="^5.6"
pytest-mock = "^3.3.1"
pydantic="^1.7"
mypy = "^0.790"
pymongo-stubs = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
pytest-xdist = "^2.2.0"

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true
